--- a/home.html
+++ b/home.html
@@ -1,21 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <div>
-        <label>Enter Your Todo</label>
-        <input type='text' id='todo'/> 
-        <button id='todoBtn'>Add Todo</button>
-        <p id='addItemMsg'></p>
-        <ul id='todoList'></ul>
-    </div>  
-    <div>
-        <label>Enter Your Goal</label>
-        <input type='text' id='goal' > 
-        <button id='goalBtn'>Add Goal</button>
-        <ul id='goalList'></ul>
-    </div>  
+    <div id='app'></div>
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/redux/3.7.2/redux.min.js"></script>
+<script src="https://unpkg.com/react@16.3.0-alpha.1/umd/react.development.js"></script>
+<script src="https://unpkg.com/react-dom@16.3.0-alpha.1/umd/react-dom.development.js"></script>
+<script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
 <script>
 
 const ADD_TODO = 'ADD_TODO';
@@ -97,14 +88,10 @@ function checker(store){
                 return result;
             }
 
-            if(action.type === ADD_TODO){
-                document.getElementById('addItemMsg').innerHTML = 'Don\'t forget to ' + action.todo.name +'!';
-            }
-
             return next(action)
         }
     }
-}
+} 
 
 const logger = (store) => (next) => (action) => {
     console.group(action)
@@ -113,7 +100,7 @@ const logger = (store) => (next) => (action) => {
         console.log('The new state is: ', store.getState());
     console.groupEnd()
     return result
-}
+} 
 
 
 const store = Redux.createStore(Redux.combineReducers({
@@ -121,13 +108,13 @@ const store = Redux.createStore(Redux.combineReducers({
     goals
 }),Redux.applyMiddleware(checker, logger))
 
-store.subscribe(() => {
+{/* store.subscribe(() => {
     const {todos,goals} = store.getState();
     document.getElementById('todoList').innerHTML = ''
     document.getElementById('goalList').innerHTML = ''
     todos.forEach(addTodoToDOM);
     goals.forEach(addGoalToDOM);
-})
+}) */}
 
 store.dispatch(addToDOAction({id: 0,name: 'Learn Redux',complete: false}))
 
@@ -135,50 +122,104 @@ store.dispatch(addToDOAction({id: 0,name: 'Learn Redux',complete: false}))
 function generateID(){
     return Math.random().toString(36).substring(2) + (new Date()).getTime().toString(36);
 }
-function addToTodo (){
-    const input = document.getElementById('todo');
-    const name = input.value;
-    input.value = '';
-    store.dispatch(addToDOAction({id: generateID(),name,complete:true}));
-}
 
-function addGoal() {
-    const input = document.getElementById('goal');
-    const name = input.value;
-    input.value = '';
-    store.dispatch(addGoalAction({id: generateID(),name,complete:false}));
-}
+</script>
 
-function createButtonHelper(onClick){
-    const btn = document.createElement('button');
-    btn.innerHTML = 'X'
-    btn.addEventListener('click', onClick)
-    return btn;
-}
+<script type='text/babel'>
+    function List(props){
+        return(
+            <ul>
+                {props.items.map((item) => 
+                <li key={item.id}>
+                    <span onClick={() => props.toggle && props.toggle(item.id)}
+                    style={{textDecoration:item.complete? 'line-through' : ''}}>{item.name}</span>
+                    <button onClick={() => props.removeItem(item)}>X</button>
+                </li>)}
+            </ul>
+        )
+    }
 
-function addTodoToDOM(todo){
-    const node = document.createElement('li');
-    node.innerText = todo.name;
-    node.style.textDecoration = todo.complete? '' : 'line-through';
-    const btn = createButtonHelper(() => {
-        store.dispatch(removeTodoAction(todo.id))});
-    node.append(btn);
-    node.addEventListener('click',() => {
-        store.dispatch(toggleTodoAction(todo.id));
-    })
-    document.getElementById('todoList').appendChild(node);
-}
+    class Todos extends React.Component{
+        addItem = (e) => {
+            e.preventDefault();
+            const name = this.input.value;
+            this.input.value = '';
+            this.props.store.dispatch(addToDOAction({
+                id: generateID(),
+                name,
+                complete:false}));
+        }
+        removeItem = (item) => {
+            this.props.store.dispatch(removeTodoAction(item.id));
+        }
+        toggleItem = (id) => {
+            this.props.store.dispatch(toggleTodoAction(id));
+        }
+        render(){
+            return (
+                <div>
+                    <h1>Todos List</h1>
+                    <input
+                    type='text'
+                    placeholder='Enter your todo'
+                    ref={(input) => this.input = input}
+                    />
+                    <button onClick={this.addItem}>Add Todo</button>
+                    <List items={this.props.todos} removeItem={this.removeItem} toggle={this.toggleItem}/>
+                </div>
+            )
+        }
+    }
 
-function addGoalToDOM(goal){
-    const node = document.createElement('li');
-    node.innerText = goal.name;
-    const btn = createButtonHelper(() => {
-        store.dispatch(removeGoalAction(goal.id));
-    })
-    node.appendChild(btn);
-    document.getElementById('goalList').appendChild(node);
-}
-todoBtn.addEventListener('click',addToTodo)
-goalBtn.addEventListener('click',addGoal)
+    class Goals extends React.Component{
+        addItem = (e) => {
+            e.preventDefault();
+            const name = this.input.value;
+            this.input.value = '';
+
+            this.props.store.dispatch(addGoalAction({
+                id: generateID(),
+                name,
+                complete:false}));
+        }
+        removeItem = (item) => {
+            this.props.store.dispatch(removeGoalAction(item.id));
+        }
+        render(){
+            return (
+                <div>
+                    <h1>Goals List</h1>
+                    <input
+                    type='text'
+                    placeholder='Add Goal'
+                    ref= {(input) => this.input = input}
+                    />
+                    <button onClick={this.addItem}>Add Goal</button>
+                    <List items={this.props.goals} removeItem={this.removeItem}/>
+                </div>
+            )
+        }
+    }
+    class App extends React.Component{
+        componentDidMount(){
+            const {store} = this.props;
+
+            store.subscribe(() => this.forceUpdate());
+        }
+        render(){
+            const {store} = this.props;
+            const {todos,goals} = store.getState();
+            return(
+                <div>
+                    <Todos todos= {todos} store = {this.props.store}/>
+                    <Goals goals= {goals} store = {this.props.store}/>    
+                </div>
+            )
+        }
+    }
+
+    ReactDOM.render(<App store = {store}/> ,
+        document.getElementById('app')
+    )
 </script>
 </html>
